# content

./: .env.example  .gitignore  PRD.md  TASK.md  main.py  pyproject.toml
.agents/skills/content-pipeline/: SKILL.md
.agents/skills/ltx-video/: SKILL.md
.agents/skills/nano-banana-2/: SKILL.md
.agents/skills/nextjs-building/: SKILL.md
.agents/skills/veo-video/: SKILL.md
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  web-research-specialist.md
.claude/skills/fastapi-developing/: SKILL.md
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/api/: jobs.py  projects.py  trends.py  websocket.py
backend/clients/: __init__.py  base.py  comfyui_client.py  ffmpeg_client.py  google_client.py  openai_client.py
backend/pipeline/: brief_parser.py  concatenator.py  orchestrator.py  prompt_generator.py
backend/trend_intelligence/: prompt_enhancer.py
docs/: PRD.md  video_ltx2_3_i2v.json  video_ltx2_3_t2v.json
docs/workflows/: README.md
scripts/: _scripts_context.md  ltx_broll_demo.py  ltx_food_demo.py  ltx_product_demo.py  tiktok_remix.py  watch_showcase.py
tests/: conftest.py  test_brief_parser.py  test_comfyui_client.py  test_concatenator.py  test_e2e_plan.py  test_e2e_trend.py  test_ffmpeg.py  test_gemini_analyzer.py  test_google_client.py  test_integration.py  test_openai_client.py  test_orchestrator.py  test_prompt_enhancer.py  test_real_comfyui.py  test_real_trends.py  test_trend_fetchers.py  test_trends_api.py  test_video_intelligence_analyzer.py  test_websocket.py  test_workflow_variants.py
tests/api/: test_jobs.py  test_projects.py
(+46 files in other folders)
